Update and use appveyor cache in one step

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -1,16 +1,15 @@
 [General]
 Branch = master
 ShallowClone = True
-Command = craft
 
 # Variables defined here override the default value
-# The variable names are casesensitive
+# The variable names are case sensitive
 [Variables]
 #Root = D:\qt-sdk
 
-#Values need to be overwritten to create a chache
+#Values need to be overwritten to create a cache
 UseCache = True
-CreateCache = False
+CreateCache = True
 Msys = C:\msys64\
 APPVEYOR_BUILD_FOLDER = ${Variables:Root}
 
@@ -32,15 +31,17 @@ Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:APPVEYOR_BUILD_FOLDER}/cache
 Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray
 Compile/BuildType = Release
-Compile/BuildTests = False
 ContinuousIntegration/Enabled=True
 ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/gammaray/binaries/
+ContinuousIntegration/UpdateRepository = True
 QtSDK/Version=5.10.0
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 
 [BlueprintSettings]
+/.buildTests = False
+
 kde.version = 17.12.0
 frameworks.version = 5.42.0
 
