--- a/appveyor.ini
+++ b/appveyor.ini
@@ -29,11 +29,11 @@ ShortPath/JunctionDir = ${Variables:Root}/csp
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:APPVEYOR_BUILD_FOLDER}/cache
-Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray
-Compile/BuildType = Release
+Packager/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray/cache
+ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/cache/gammaray/binary
 ContinuousIntegration/Enabled=True
-ContinuousIntegration/RepositoryUrl = http://downloads.kdab.com/ci/gammaray/binaries/
 ContinuousIntegration/UpdateRepository = True
+Compile/BuildType = Release
 QtSDK/Version=5.10.0
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
@@ -41,9 +41,6 @@ Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 
 [BlueprintSettings]
 /.buildTests = False
-
-kde.version = 17.12.0
-frameworks.version = 5.42.0
 
 qt-apps/gammaray.version = master
 qt-apps/charm.version = master
