Fix installation of probe PDB and Android dependency XML files

--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -59,9 +59,6 @@ if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
   set_target_properties(gammaray_probe PROPERTIES PREFIX "")
   gammaray_set_rpath(gammaray_probe ${PROBE_INSTALL_DIR})
   install(TARGETS gammaray_probe DESTINATION ${PROBE_INSTALL_DIR})
-  if(MSVC)
-    install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_core>/$<TARGET_PDB_FILE_NAME:gammaray_core>" DESTINATION ${PROBE_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
-  endif()
   if(WIN32)
     set_target_properties(gammaray_winloader PROPERTIES PREFIX "")
     install(TARGETS gammaray_winloader DESTINATION ${PROBE_INSTALL_DIR})
@@ -83,12 +80,16 @@ else()
                         INCLUDE_INSTALL_DIR ${INCLUDE_INSTALL_DIR})
 
     install(FILES ${PRI_FILENAME} DESTINATION ${ECM_MKSPECS_INSTALL_DIR})
-    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gammaray_probe-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
   else()
     install(TARGETS gammaray_probe ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
-  if(MSVC)
-     install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_probe>/$<TARGET_PDB_FILE_NAME:gammaray_probe>" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
+  if (ANDROID)
+    install(FILES gammaray_probe-android-dependencies.xml RENAME gammaray_probe-${GAMMARAY_PROBE_ABI}-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
   endif()
 endif()
+
+if(MSVC)
+    install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_probe>/$<TARGET_PDB_FILE_NAME:gammaray_probe>" DESTINATION ${BIN_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
+endif()
+
 endif() # GAMMARAY_CLIENT_ONLY_BUILD
