Introduce a client side proxy model for the property view
So far this only contains the headers (for translation), but this paves
the way for moving more of the expensive tooltip generation here, which
then can be done on demand (and also get properly translated).

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -6,6 +6,7 @@ set(gammaray_ui_srcs
   aboutwidget.cpp
   themedimagelabel.cpp
   clientdecorationidentityproxymodel.cpp
+  clientpropertymodel.cpp
   clienttoolmanager.cpp
   clienttoolmodel.cpp
   contextmenuextension.cpp
