--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,9 @@ endif()
 if(POLICY CMP0063)
   cmake_policy(SET CMP0063 NEW)
 endif()
+if(POLICY CMP0068)
+  cmake_policy(SET CMP0068 NEW)
+endif()
 
 project(GammaRay CXX C)
 
@@ -103,6 +106,7 @@ include(CTest)
 include(GammaRayMacros)
 include(GammaRayMacrosInternal)
 include(FeatureSummary)
+set(KDE_INSTALL_USE_QT_SYS_PATHS OFF)
 include(ECMGeneratePriFile)
 include(ECMEnableSanitizers)
 include(GenerateExportHeader)
