objectvisualizer: Fix indentation in CMake code

--- a/plugins/objectvisualizer/CMakeLists.txt
+++ b/plugins/objectvisualizer/CMakeLists.txt
@@ -39,47 +39,44 @@ set(HAVE_VTK ${VTK_FOUND})
 
 # VTK includes QtGui/... stuff => breaks compilation with Qt5
 if(VTK_FOUND AND NOT Qt5Core_FOUND AND GAMMARAY_BUILD_UI)
+  set(OPTIONAL_VTK_LIBRARIES)
 
-set(OPTIONAL_VTK_LIBRARIES
-)
+  add_definitions(-DVTKGUI_ENABLED -DVTK_EXCLUDE_STRSTREAM_HEADERS)
 
-add_definitions(-DVTKGUI_ENABLED -DVTK_EXCLUDE_STRSTREAM_HEADERS)
+  include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
 
-include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
+  include(${VTK_USE_FILE})
 
-include(${VTK_USE_FILE})
+  link_directories(${VTK_LIBRARY_DIRS})
 
-link_directories(${VTK_LIBRARY_DIRS})
+  set(gammaray_objectvisualizer_ui_plugin_srcs
+    objectvisualizerwidget.cpp
+    vtkcontainer.cpp
+    vtkpanel.cpp
+    vtkwidget.cpp
+  )
 
-set(gammaray_objectvisualizer_ui_plugin_srcs
-  objectvisualizerwidget.cpp
-  vtkcontainer.cpp
-  vtkpanel.cpp
-  vtkwidget.cpp
-)
+  list(APPEND OPTIONAL_VTK_LIBRARIES
+    ${VTK_LIBRARIES}
+  )
 
-list(APPEND OPTIONAL_VTK_LIBRARIES
-  ${VTK_LIBRARIES}
-)
+  if(${VTK_MAJOR_VERSION} EQUAL 5)
+    list(APPEND OPTIONAL_VTK_LIBRARIES QVTK)
+  elseif(${VTK_MAJOR_VERSION} EQUAL 6)
+    list(APPEND OPTIONAL_VTK_LIBRARIES vtkGUISupportQt)
+  endif()
 
-if(${VTK_MAJOR_VERSION} EQUAL 5)
-  list(APPEND OPTIONAL_VTK_LIBRARIES QVTK)
-elseif(${VTK_MAJOR_VERSION} EQUAL 6)
-  list(APPEND OPTIONAL_VTK_LIBRARIES vtkGUISupportQt)
-endif()
+  gammaray_add_plugin(gammaray_objectvisualizer_ui_plugin
+    DESKTOP gammaray_objectvisualizer_ui.desktop.in
+    SOURCES ${gammaray_objectvisualizer_ui_plugin_srcs}
+  )
 
-gammaray_add_plugin(gammaray_objectvisualizer_ui_plugin
-  DESKTOP gammaray_objectvisualizer_ui.desktop.in
-  SOURCES ${gammaray_objectvisualizer_ui_plugin_srcs}
-)
-
-target_link_libraries(gammaray_objectvisualizer_ui_plugin
-  ${OPTIONAL_VTK_LIBRARIES}
-  ${VTK_QT_LIBRARY}
-  gammaray_common
-  gammaray_ui
-)
-
+  target_link_libraries(gammaray_objectvisualizer_ui_plugin
+    ${OPTIONAL_VTK_LIBRARIES}
+    ${VTK_QT_LIBRARY}
+    gammaray_common
+    gammaray_ui
+  )
 endif()
 
 ######## END VTK VISUALIZATION
