objectvisualizer: Port to Qt5
Dropping Qt4 support (despite it'd work out of the box) to reduce
maintenance burden.

Also make it clear that this plugin is just for toying around.

Also greatly simplify CMake code

--- a/plugins/objectvisualizer/CMakeLists.txt
+++ b/plugins/objectvisualizer/CMakeLists.txt
@@ -20,11 +20,14 @@ target_link_libraries(gammaray_objectvisualizer_plugin
 find_path(VTK_DIR VTKConfig.cmake
   /usr/lib64/vtk /usr/lib/vtk /usr/local/lib64/vtk /usr/local/lib/vtk
 )
-find_package(VTK QUIET)
+set(VTK_LIBS vtkGUISupportQt
+  vtkViewsInfovis # vtkGraphLayoutView & friends
+)
+find_package(VTK 6.1 COMPONENTS ${VTK_LIBS} CONFIG)
 set_package_properties(VTK PROPERTIES
   TYPE OPTIONAL
   DESCRIPTION "Visualization Toolkit"
-  PURPOSE "Needed for the object visualizer plugin."
+  PURPOSE "Needed for the object visualizer plugin (required Qt5). Just for toying around, highly experimental plugin."
   URL "http://www.vtk.org"
 )
 if(VTK_FOUND)
@@ -36,17 +39,13 @@ if(VTK_FOUND)
   endif()
 endif()
 
-# VTK includes QtGui/... stuff => breaks compilation with Qt5
-if(VTK_FOUND AND NOT Qt5Core_FOUND AND GAMMARAY_BUILD_UI)
+# Only possibly build the plugin under Qt5 (and when VTK was built with Qt5 support as well)
+if(VTK_FOUND AND Qt5Core_FOUND AND VTK_QT_VERSION EQUAL 5 AND GAMMARAY_BUILD_UI)
   set(OPTIONAL_VTK_LIBRARIES)
 
   add_definitions(-DVTKGUI_ENABLED -DVTK_EXCLUDE_STRSTREAM_HEADERS)
 
-  include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
-
   include(${VTK_USE_FILE})
-
-  link_directories(${VTK_LIBRARY_DIRS})
 
   set(gammaray_objectvisualizer_ui_plugin_srcs
     objectvisualizerwidget.cpp
@@ -55,24 +54,13 @@ if(VTK_FOUND AND NOT Qt5Core_FOUND AND GAMMARAY_BUILD_UI)
     vtkwidget.cpp
   )
 
-  list(APPEND OPTIONAL_VTK_LIBRARIES
-    ${VTK_LIBRARIES}
-  )
-
-  if(${VTK_MAJOR_VERSION} EQUAL 5)
-    list(APPEND OPTIONAL_VTK_LIBRARIES QVTK)
-  elseif(${VTK_MAJOR_VERSION} EQUAL 6)
-    list(APPEND OPTIONAL_VTK_LIBRARIES vtkGUISupportQt)
-  endif()
-
   gammaray_add_plugin(gammaray_objectvisualizer_ui_plugin
     DESKTOP gammaray_objectvisualizer_ui.desktop.in
     SOURCES ${gammaray_objectvisualizer_ui_plugin_srcs}
   )
-
+  target_include_directories(gammaray_objectvisualizer_ui_plugin SYSTEM PUBLIC ${VTK_INCLUDE_DIRS})
   target_link_libraries(gammaray_objectvisualizer_ui_plugin
-    ${OPTIONAL_VTK_LIBRARIES}
-    ${VTK_QT_LIBRARY}
+    ${VTK_LIBS}
     gammaray_common
     gammaray_ui
   )
