Update ignored libs

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -46,9 +46,9 @@ qt-apps/gammaray.version = master
 qt-apps/charm.version = master
 qt-apps/fatcrm.version = master
 
-win32libs/icu.ignored = True
+libs/icu.ignored = True
 binary/mysql.ignored = True
-win32libs/dbus.ignored = True
+libs/dbus.ignored = True
 
 [windows-msvc2015_32-cl]
 Packager/PackageType = SevenZipPackager
