Stock qt only loads openssl 1.0*

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -44,7 +44,8 @@ Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 
 qt-apps/gammaray.version = master
 qt-apps/charm.version = master
-qt-apps/fatcrm.version = master
+
+libs/openssl.version = 1.0.2o
 
 libs/icu.ignored = True
 binary/mysql.ignored = True
