Bring this into the year 2018

--- a/plugins/positioning/CMakeLists.txt
+++ b/plugins/positioning/CMakeLists.txt
@@ -6,25 +6,27 @@ set(gammaray_positioning_srcs
 )
 gammaray_add_plugin(gammaray_positioning JSON gammaray_positioning.json SOURCES ${gammaray_positioning_srcs})
 target_link_libraries(gammaray_positioning gammaray_core Qt5::Positioning)
-endif()
 
 # proxy geo position info source factory
-set(gammaray_geopositioninfosource_srcs
-  geopositioninfosourcefactory.cpp
-  geopositioninfosource.cpp
-  positioninginterface.cpp
-)
+if (NOT Qt5Core_VERSION VERSION_LESS 5.7)
+    set(gammaray_geopositioninfosource_srcs
+    geopositioninfosourcefactory.cpp
+    geopositioninfosource.cpp
+    positioninginterface.cpp
+    )
 
-add_library(gammaray_geopositioninfosource MODULE ${gammaray_geopositioninfosource_srcs})
-target_include_directories(gammaray_geopositioninfosource SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
-target_link_libraries(gammaray_geopositioninfosource
-  gammaray_common
-  Qt5::Positioning
-)
-install(TARGETS gammaray_geopositioninfosource DESTINATION ${PROBE_PLUGIN_INSTALL_DIR}/position)
+    add_library(gammaray_geopositioninfosource MODULE ${gammaray_geopositioninfosource_srcs})
+    target_include_directories(gammaray_geopositioninfosource SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
+    target_link_libraries(gammaray_geopositioninfosource
+    gammaray_common
+    Qt5::Positioning
+    )
+    install(TARGETS gammaray_geopositioninfosource DESTINATION ${PROBE_PLUGIN_INSTALL_DIR}/position)
+endif()
+endif()
 
 # ui plugin
-if(GAMMARAY_BUILD_UI AND Qt5Location_FOUND AND Qt5QuickWidgets_FOUND)
+if(GAMMARAY_BUILD_UI AND Qt5Location_FOUND AND Qt5QuickWidgets_FOUND AND NOT Qt5Core_VERSION VERSION_LESS 5.7)
   set(gammaray_positioning_ui_srcs
     positioningwidget.cpp
     positioninginterface.cpp
@@ -33,6 +35,7 @@ if(GAMMARAY_BUILD_UI AND Qt5Location_FOUND AND Qt5QuickWidgets_FOUND)
     positioningwidget.qrc
   )
 
+  qml_lint(mapview.qml)
   gammaray_add_plugin(gammaray_positioning_ui JSON gammaray_positioning.json SOURCES ${gammaray_positioning_ui_srcs})
 
   target_link_libraries(gammaray_positioning_ui
