Let the target application find proxy plugins when launching with GammaRay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -707,9 +707,11 @@ if(GAMMARAY_INSTALL_QT_LAYOUT)
   endif()
   set(PROBE_PLUGIN_INSTALL_DIR "plugins/gammaray")
   set(PLUGIN_INSTALL_DIR ${PROBE_PLUGIN_INSTALL_DIR})
+  set(TARGET_PLUGIN_INSTALL_DIR "plugins/gammaray-target")
 else()
   set(PROBE_INSTALL_DIR "${PLUGIN_INSTALL_DIR}/${GAMMARAY_PLUGIN_VERSION}/${GAMMARAY_PROBE_ABI}${GAMMARAY_PROBE_ABI_POSTFIX}")
   set(PROBE_PLUGIN_INSTALL_DIR ${PROBE_INSTALL_DIR})
+  set(TARGET_PLUGIN_INSTALL_DIR "${PROBE_INSTALL_DIR}/target")
 endif()
 
 if(NOT GAMMARAY_OUTPUT_PREFIX) # set by multibuild
