--- a/appveyor.ini
+++ b/appveyor.ini
@@ -51,6 +51,9 @@ libs/icu.ignored = True
 binary/mysql.ignored = True
 libs/dbus.ignored = True
 
+# since Qt 5.11 qttools (qtdoc) depend on clang, we don't need qtdoc
+libs/llvm-meta.ignored = True
+
 [windows-msvc2015_32-cl]
 Packager/PackageType = SevenZipPackager
 QtSDK/Compiler = msvc2015
