--- a/appveyor.ini
+++ b/appveyor.ini
@@ -54,20 +54,23 @@ libs/dbus.ignored = True
 # since Qt 5.11 qttools (qtdoc) depend on clang, we don't need qtdoc
 libs/llvm-meta.ignored = True
 
+[windows-msvc2015_32-cl-BlueprintSettings]
+qt-apps/gammaray.gammarayProbeOnly = True
+
 [windows-msvc2015_32-cl]
 Packager/PackageType = SevenZipPackager
 QtSDK/Compiler = msvc2015
 General/ABI = windows-msvc2015_32-cl
-General/Options = qt-apps/gammaray.gammarayProbeOnly = True
+
+[windows-mingw_32-gcc-BlueprintSettings]
+qt-apps/gammaray.gammarayProbeOnly = True
+qt-apps/gammaray.disableGammarayBuildCliInjector = True
 
 [windows-mingw_32-gcc]
 Packager/PackageType = SevenZipPackager
 QtSDK/Compiler = mingw53_32
 General/ABI = windows-mingw_32-gcc
-General/Options = qt-apps/gammaray.gammarayProbeOnly = True;qt-apps/gammaray.disableGammarayBuildCliInjector = True
 
 [windows-msvc2017_64-cl]
-# create a portable 7z and an installer
-Packager/PackageType = MultiCollectionPackager
 QtSDK/Compiler = msvc2017_64
 General/ABI = windows-msvc2017_64-cl
