Add censorship infrastructure for the propertyview
Allows plugins to install static filters, filtering certain properties
out of the view. Filtering is (for now) only done by the QMetaProperty
adaptor.
Use cases are preventing crashes (some properties cause crashes if just
blindly read) or providing more specialized adaptors for certain
properties.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -43,6 +43,7 @@ set(gammaray_srcs
   propertyadaptor.cpp
   propertyaggregator.cpp
   propertydata.cpp
+  propertyfilter.cpp
   dynamicpropertyadaptor.cpp
   qmetapropertyadaptor.cpp
   metapropertyadaptor.cpp
