Fix appveyor artifacts

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -18,7 +18,6 @@ APPVEYOR_BUILD_FOLDER = ${Variables:Root}
 # Settings are Category/key=value
 # Category is case sensitive
 [GeneralSettings]
-General/EMERGE_PKGDSTDIR=${Variables:APPVEYOR_BUILD_FOLDER}/binaries
 Paths/python = C:\Python36
 Paths/python27 = C:\Python27
 Paths/Msys = ${Variables:Msys}
@@ -26,6 +25,7 @@ Paths/DownloadDir = ${Variables:Root}/downloads
 ShortPath/Enabled = False
 ShortPath/EnableJunctions = True
 ShortPath/JunctionDir = ${Variables:Root}/csp
+Packager/Destination =${Variables:APPVEYOR_BUILD_FOLDER}/binaries
 Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:APPVEYOR_BUILD_FOLDER}/cache
@@ -38,6 +38,9 @@ QtSDK/Version=5.10.1
 QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
+
+# the version of the config
+Version/ConfigVersion = 6
 
 [BlueprintSettings]
 /.buildTests = False
