ProblemReporter: Add support for problem scans
This commit adds the framework for doing problem scans to the problem
reporter as well as a preliminary UI to start them.
So far, it's missing any start/finished notifications as well as names
and descriptions for the scans.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -82,6 +82,7 @@ set(gammaray_common_internal_srcs
   tools/objectinspector/connectionsextensioninterface.cpp
   tools/messagehandler/messagehandlerinterface.cpp
   tools/metatypebrowser/metatypebrowserinterface.cpp
+  tools/problemreporter/problemreporterinterface.cpp
   tools/resourcebrowser/resourcebrowserinterface.cpp
 )
 
