--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -79,6 +79,7 @@ set(gammaray_ui_srcs
   tools/objectinspector/bindingtab.cpp
   tools/objectinspector/stacktracetab.cpp
   tools/problemreporter/problemreporterwidget.cpp
+  tools/problemreporter/problemreporterclient.cpp
   tools/problemreporter/problemclientmodel.cpp
   tools/resourcebrowser/clientresourcemodel.cpp
   tools/resourcebrowser/resourcebrowserwidget.cpp
