Remove GammaRayQt4To5Porting.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -466,8 +466,6 @@ if(Qt5Core_FOUND)
   endif()
   set(HAVE_PRIVATE_QT_HEADERS TRUE)
 
-  include("cmake/GammaRayQt4To5Porting.cmake")
-
   set(HAVE_QT_CONCURRENT ${Qt5Concurrent_FOUND})
   set(HAVE_QT_WIDGETS ${Qt5Widgets_FOUND})
   set(HAVE_QT_SVG ${Qt5Svg_FOUND})
@@ -575,7 +573,7 @@ else()
   set(GAMMARAY_CORE_ONLY_LAUNCHER TRUE)
 endif()
 
-add_feature_info("QtScript debugger" QT_QTSCRIPTTOOLS_FOUND "Requires QtScript and QtScriptTools.")
+add_feature_info("QtScript debugger" Qt5ScriptTools_FOUND "Requires QtScript and QtScriptTools.")
 add_feature_info("Widget .ui file export" HAVE_QT_DESIGNER "Requires QtDesigner library.")
 add_feature_info("3D Widget Inspector" GAMMARAY_WITH_WIDGET3D "Requires Qt5 >= 5.7, Qt3D and QtQuick Controls")
 
@@ -758,7 +756,7 @@ add_subdirectory(common)
 add_subdirectory(core)
 add_subdirectory(probe)
 add_subdirectory(launcher)
-if(GAMMARAY_BUILD_UI AND (Qt5Widgets_FOUND OR QT_QTGUI_FOUND))
+if(GAMMARAY_BUILD_UI AND Qt5Widgets_FOUND)
   if(NOT GAMMARAY_DISABLE_FEEDBACK)
     add_subdirectory(3rdparty/kuserfeedback)
   endif()
@@ -771,7 +769,7 @@ if(GAMMARAY_BUILD_UI AND (Qt5Widgets_FOUND OR QT_QTGUI_FOUND))
     add_subdirectory(app)
   endif()
 endif()
-if(BUILD_TESTING AND (Qt5Test_FOUND OR QT_QTTEST_FOUND) AND NOT CMAKE_CROSSCOMPILING)
+if(BUILD_TESTING AND Qt5Test_FOUND AND NOT CMAKE_CROSSCOMPILING)
   add_subdirectory(tests)
 endif()
 add_subdirectory(plugins)
