--- a/inprocessui/CMakeLists.txt
+++ b/inprocessui/CMakeLists.txt
@@ -5,6 +5,7 @@ set_target_properties(gammaray_inprocessui PROPERTIES
   LIBRARY_OUTPUT_DIRECTORY "${GAMMARAY_OUTPUT_PREFIX}/${PROBE_PLUGIN_INSTALL_DIR}"
 )
 gammaray_set_rpath(gammaray_inprocessui ${PROBE_PLUGIN_INSTALL_DIR})
+target_compile_features(gammaray_inprocessui PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 
 if(GAMMARAY_INSTALL_QT_LAYOUT)
   set_target_properties(gammaray_inprocessui PROPERTIES OUTPUT_NAME gammaray_inprocessui-${GAMMARAY_PROBE_ABI})
