--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -96,6 +96,7 @@ set_target_properties(gammaray_ui PROPERTIES
   OUTPUT_NAME gammaray_ui-${GAMMARAY_PROBE_ABI}
 )
 gammaray_set_rpath(gammaray_ui ${LIB_INSTALL_DIR})
+target_compile_features(gammaray_ui PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 
 gammaray_target_relocatable_interfaces(gammaray_ui_ipaths)
 target_include_directories(gammaray_ui PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}> $<INSTALL_INTERFACE:${gammaray_ui_ipaths}>)
@@ -119,6 +120,7 @@ set(gammaray_ui_internal_srcs
 
 add_library(gammaray_ui_internal STATIC ${gammaray_ui_internal_srcs})
 set_target_properties(gammaray_ui_internal PROPERTIES POSITION_INDEPENDENT_CODE ON)
+target_compile_features(gammaray_ui_internal PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 target_include_directories(gammaray_ui_internal SYSTEM PRIVATE ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
 target_link_libraries(gammaray_ui_internal
   ${Qt5Core_LIBRARIES}
