--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,6 +125,11 @@ endif()
 if(BAD_CXX_MESSAGE)
   message(FATAL_ERROR "\nSorry, ${BAD_CXX_MESSAGE} is required to build this software. Please retry using a modern compiler that supports C++11.")
 endif()
+set(GAMMARAY_REQUIRED_CXX_FEATURES
+        cxx_lambdas cxx_nullptr cxx_range_for cxx_raw_string_literals cxx_uniform_initialization
+        cxx_variadic_templates cxx_rvalue_references cxx_defaulted_functions cxx_deleted_functions
+        cxx_override cxx_final cxx_nonstatic_member_init
+   )
 
 # Version setup
 set(GAMMARAY_VERSION_MAJOR "2")
