--- a/plugins/positioning/CMakeLists.txt
+++ b/plugins/positioning/CMakeLists.txt
@@ -17,6 +17,7 @@ if (NOT Qt5Core_VERSION VERSION_LESS 5.7)
     )
 
     add_library(gammaray_geopositioninfosource MODULE ${gammaray_geopositioninfosource_srcs})
+    target_compile_features(gammaray_geopositioninfosource PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
     target_include_directories(gammaray_geopositioninfosource SYSTEM PRIVATE ${Qt5Core_PRIVATE_INCLUDE_DIRS})
     target_link_libraries(gammaray_geopositioninfosource
         gammaray_common
