--- a/plugins/signalmonitor/CMakeLists.txt
+++ b/plugins/signalmonitor/CMakeLists.txt
@@ -6,6 +6,7 @@ set(gammaray_signalmonitor_shared_srcs
 add_library(gammaray_signalmonitor_shared STATIC ${gammaray_signalmonitor_shared_srcs})
 target_link_libraries(gammaray_signalmonitor_shared LINK_PRIVATE gammaray_common)
 set_target_properties(gammaray_signalmonitor_shared PROPERTIES POSITION_INDEPENDENT_CODE ON)
+target_compile_features(gammaray_signalmonitor_shared PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 
 # probe plugin
 if (NOT GAMMARAY_CLIENT_ONLY_BUILD)
