--- a/tests/shared/CMakeLists.txt
+++ b/tests/shared/CMakeLists.txt
@@ -10,4 +10,5 @@ set(gammaray_shared_test_srcs
 )
 
 add_library(gammaray_shared_test_data STATIC ${gammaray_shared_test_srcs})
+target_compile_features(gammaray_shared_test_data PUBLIC ${GAMMARAY_REQUIRED_CXX_FEATURES})
 target_link_libraries(gammaray_shared_test_data ${Qt5Core_LIBRARIES})
