--- a/3rdparty/kde/CMakeLists.txt
+++ b/3rdparty/kde/CMakeLists.txt
@@ -2,6 +2,7 @@ set(gammaray_kitemmodels_srcs
   klinkitemselectionmodel.cpp
   kmodelindexproxymapper.cpp
   krecursivefilterproxymodel.cpp
+  kitemmodels_debug.cpp
 )
 
 add_library(gammaray_kitemmodels SHARED ${gammaray_kitemmodels_srcs})
